# SmartMealChatBot

./: .env  .gitignore  AUDIT_REPORT.md  INDEXES_GUIDE.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
configs/: app.json  env.example
notebooks/: winmart_full_data.json
scripts/: build_embeddings.py  run_etl.py
src/: main.py
src/agents/: base_agent.py  general_agent.py  info_gatherer_agent.py  ingredient_matcher_agent.py  intent_agent.py  meal_planner_agent.py  orchestrator.py  product_search_agent.py
src/core/: catalog_constants.py  logger.py  memory.py  settings.py  utils.py
src/database/: indexes.py  mongo_client.py
src/database/repositories/: memory_repository.py  product_repository.py
src/embeddings/: embedding_service.py
src/etl/: add_main_category.py  category_mapper.py  cleaner.py  crawl_data.py  loader.py
src/graph/: nodes.py  state.py  worker.py
src/llm/: llm_client.py
src/retrieval/: vector_search.py
src/tools/: product_search_tool.py
test/: test_agent.py  test_llm.py  test_logger.py  test_meal_agent.py  test_orchestrator.py  test_product_agent.py  test_retrieval.py  test_run.py  test_tool.py
