[project]
name = "smartmeal-chatbot"
version = "0.1.0"
description = "Smart meal planning and product search chatbot powered by Gemini LLM and local product knowledge."
authors = [ { name = "Your Name", email = "you@example.com" } ]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["chatbot", "meal-planner", "winmart", "generative-ai", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "python-dotenv",
    "google-generativeai",
    "pymongo",
    "numpy",
    "langchain",
    "langgraph",
    "pyyaml",        
    "streamlit"
]

[tool.setuptools]
# Nếu bạn muốn đóng gói cả thư mục configs vào package
include-package-data = true

[tool.setuptools.package-data]
"*" = ["configs/*.yaml"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["test", "scripts"]